k8s/squid/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: squid
  namespace: squid
  labels:
    app.kubernetes.io/name: squid
    app.kubernetes.io/part-of: devops-cli-stack
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9301"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: squid
  ports:
    - name: http-proxy
      port: 3128
      targetPort: 3128
      protocol: TCP
    - name: metrics
      port: 9301
      targetPort: 9301
      protocol: TCP
    - name: snmp
      port: 3401
      targetPort: 3401
      protocol: UDP
